--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -3,6 +3,7 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 1vh;
   margin-left: $left-sidebar-left-margin;
+  margin-top: $sidebar-margin-top;
 }
 
 .sidebar-item {
