--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -7,6 +7,7 @@ $sidebar-width: 10vw;
 // margins
 $left-sidebar-left-margin: 10vw;
 $center-item-left-margin: 10vw;
+$sidebar-margin-top: 10vh;
 
 //colors
 $nakul-bg-color: #FFFEFC;
