--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -11,3 +11,17 @@ $sidebar-margin-top: 10vh;
 
 //colors
 $nakul-bg-color: #FFFEFC;
+
+$fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace;
+
+$alpha: #666;
+$beta: #222;
+$gama: #727272;
+$delta: #4b0082;
+$epsilon: #ededed;
+
+$mobile: "only screen and (max-width: 400px)";
+$tablet: "only screen and (min-width: 400px) and (max-width: 1050px)";
+$above: "only screen and (min-width: 780px)";
+$below: "only screen and (max-width: 780px)";
