--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -4,6 +4,7 @@
   border-radius: 1vh;
   margin-left: $left-sidebar-left-margin;
   margin-top: $sidebar-margin-top;
+  font-size: $sidebar-font-size;
 }
 
 .sidebar-item {
