--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -2,7 +2,8 @@
 $header-height: 10vh;
 
 //sidebar
-$sidebar-width: 10vw;
+$sidebar-width: 15vw;
+$sidebar-font-size: 20px;
 
 // margins
 $left-sidebar-left-margin: 10vw;
