--- a/src/styles/nakul-common.scss
+++ b/src/styles/nakul-common.scss
@@ -1,17 +1,11 @@
-
-
-
-
 .nakul-logo {
-    width: 20vw;
-    display: flex;
-    margin-left: $left-sidebar-left-margin;
     cursor: pointer;
-    padding: 5px;
-    align-items: center;
-    flex-direction: row;
-    display: flex;
-    justify-content: center
+    padding: 20px;
+  }
+
+  .fixed-top {
+    top: 0;
+    margin-top: 0;
   }
   
   .nakul-black-button {
