--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -13,6 +13,7 @@ body {
         padding: 0;
     }
 }
+
 h1,
 h2,
 h3,
@@ -43,10 +44,10 @@ p {
   max-width: 960px;
   margin: 0 auto;
   position: relative;
-  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  top: $header-height;
+  // -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  // -moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  top: $header-height
 }
 .sidebar-wrapper {
   background: #4B6A78;
@@ -265,17 +266,18 @@ p {
 .footer .fa-heart {
   color: #fb866a;
 }
+
 /* Extra small devices (phones, less than 768px) */
 @media (max-width: 767px) {
   .sidebar-wrapper {
-    position: static;
+    position: relative;
     width: inherit;
   }
   .main-wrapper {
     padding: 30px;
   }
   .main-wrapper .time {
-    position: static;
+    position: relative;
     display: block;
     margin-top: 5px;
   }
@@ -283,7 +285,7 @@ p {
     margin-bottom: 0;
   }
 }
-/* Small devices (tablets, 768px and up) */
+
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
   .skillset .level-title {
